--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,9 +46,7 @@ dependencies {
     // Older versions e.g. 2.2 may also work if you need support for older Android versions.
     compile 'com.google.zxing:core:3.0.1'
 
-    compile 'org.springframework.android:spring-android-rest-template:1.0.1.RELEASE'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.3.2'
-    compile 'org.json:json:20141113'
+    compile 'org.springframework.android:spring-android-rest-template:2.0.0.M1'
 }
 
 repositories {
@@ -56,5 +54,9 @@ repositories {
 
     maven {
         url "https://raw.github.com/embarkmobile/zxing-android-minimal/mvn-repo/maven-repository/"
+    }
+
+    maven {
+        url 'http://repo.spring.io/milestone'
     }
 }
