--- a/searchprogm/app/src/main/AndroidManifest.xml
+++ b/searchprogm/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".NewActivity"/>
+        <activity android:name=".IngredientActivity"/>
     </application>
 
 </manifest>
